kubernetes/cluster-0/apps/fediverse/mastodon/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-ingress
  namespace: fediverse
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.hsn.dev
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - social.hsn.dev
    secretName: hsn-dev-tls
  rules:
  - host: social.hsn.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mastodon-web
            port:
              number: 3000
      - path: /api/v1/streaming
        pathType: Prefix
        backend:
          service:
            name: mastodon-streaming
            port:
              number: 4000
